// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for standard user 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex flex-col items-center justify-center p-6 md:p-8"
    role="main"
  >
    <div
      class="max-w-3xl w-full"
    >
      <div
        class="flex items-center gap-4 mb-8 animate-slide-up"
      >
        <img
          alt="User avatar"
          class="w-14 h-14 rounded-xl object-cover border-2 border-[var(--orion-cyan)]/30"
          src="https://example.com/avatar.jpg"
        />
        <div>
          <h1
            class="text-2xl md:text-3xl font-bold text-[var(--orion-text-primary)] font-display"
          >
            Welcome, 
            <span
              class="text-gradient-cyan"
            >
              John
            </span>
          </h1>
          <p
            class="text-[var(--orion-text-secondary)] font-mono text-sm"
          >
            ACME EPC Contractors
          </p>
        </div>
      </div>
      <div
        class="animate-scale-in delay-100"
      >
        <div
          aria-hidden="true"
          class="relative w-32 h-32 sm:w-40 sm:h-40 md:w-48 md:h-48 mx-auto mb-6 md:mb-8"
        >
          <div
            class="absolute inset-0 rounded-full border border-[var(--orion-border)] animate-orbit-reverse"
          />
          <div
            class="absolute inset-4 rounded-full border border-[var(--orion-cyan)]/20 animate-orbit"
          />
          <div
            class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute inset-0 flex items-center justify-center"
          >
            <div
              class="w-20 h-20 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-secondary)] border border-[var(--orion-border)] flex items-center justify-center shadow-lg"
            >
              <span
                class="text-2xl font-bold text-gradient-cyan font-display"
              >
                O
              </span>
            </div>
          </div>
          <div
            class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 animate-orbit"
            style="animation-duration: 12s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-amber)]/50 flex items-center justify-center glow-box-amber"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-amber)]"
              >
                P6
              </span>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 animate-orbit-reverse"
            style="animation-duration: 15s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-emerald)]/50 flex items-center justify-center glow-box-emerald"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-emerald)]"
              >
                SAP
              </span>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-full border-2 border-[var(--orion-cyan)]/30 animate-pulse-glow"
          />
        </div>
      </div>
      <div
        class="text-center mb-8 animate-slide-up delay-200"
      >
        <h2
          class="text-lg md:text-xl font-semibold text-[var(--orion-text-primary)] mb-3 font-display"
        >
          Your P6 + SAP Command Center
        </h2>
        <p
          class="text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          ORION unifies Primavera P6 schedules with SAP financials, giving you real-time visibility across your entire project portfolio.
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10"
      >
        <div
          class="feature-card p6 animate-initial animate-slide-up"
          style="animation-delay: 300ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-amber)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  P6 Schedule Data
                </h3>
                <span
                  class="badge badge-amber"
                >
                  SCHEDULE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Projects, WBS, activities, and resources from Primavera P6
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sap animate-initial animate-slide-up"
          style="animation-delay: 400ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-emerald)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  SAP Financial Data
                </h3>
                <span
                  class="badge badge-emerald"
                >
                  FINANCE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Budget, actuals, commitments, and purchase orders
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sync animate-initial animate-slide-up"
          style="animation-delay: 500ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-cyan)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Real-time Sync
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  LIVE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Automatic synchronization keeps data always current
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card dashboard animate-initial animate-slide-up"
          style="animation-delay: 600ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-violet)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Unified Dashboard
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  ANALYTICS
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Cross-project visibility with KPIs and health metrics
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-4 animate-slide-up delay-700"
      >
        <button
          aria-busy="false"
          class="btn-primary group"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="none"
            height="20"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M13 10V3L4 14h7v7l9-11h-7z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span>
            Begin Setup
          </span>
          <svg
            aria-hidden="true"
            class="w-5 h-5 transition-transform group-hover:translate-x-1"
            fill="none"
            height="20"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M13 7l5 5m0 0l-5 5m5-5H6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <p
          class="text-sm text-[var(--orion-text-muted)] font-mono"
        >
          Setup takes ~5 minutes
        </p>
        <div
          class="flex items-center gap-2 mt-2"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-cyan)] glow-box-cyan"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for user without organization 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex flex-col items-center justify-center p-6 md:p-8"
    role="main"
  >
    <div
      class="max-w-3xl w-full"
    >
      <div
        class="flex items-center gap-4 mb-8 animate-slide-up"
      >
        <div
          aria-hidden="true"
          class="w-14 h-14 rounded-xl bg-gradient-to-br from-[var(--orion-cyan)] to-[var(--orion-violet)] flex items-center justify-center text-[var(--orion-bg-primary)] text-lg font-bold font-display"
          data-testid="avatar-fallback"
        >
          J
        </div>
        <div>
          <h1
            class="text-2xl md:text-3xl font-bold text-[var(--orion-text-primary)] font-display"
          >
            Welcome, 
            <span
              class="text-gradient-cyan"
            >
              Jane
            </span>
          </h1>
        </div>
      </div>
      <div
        class="animate-scale-in delay-100"
      >
        <div
          aria-hidden="true"
          class="relative w-32 h-32 sm:w-40 sm:h-40 md:w-48 md:h-48 mx-auto mb-6 md:mb-8"
        >
          <div
            class="absolute inset-0 rounded-full border border-[var(--orion-border)] animate-orbit-reverse"
          />
          <div
            class="absolute inset-4 rounded-full border border-[var(--orion-cyan)]/20 animate-orbit"
          />
          <div
            class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute inset-0 flex items-center justify-center"
          >
            <div
              class="w-20 h-20 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-secondary)] border border-[var(--orion-border)] flex items-center justify-center shadow-lg"
            >
              <span
                class="text-2xl font-bold text-gradient-cyan font-display"
              >
                O
              </span>
            </div>
          </div>
          <div
            class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 animate-orbit"
            style="animation-duration: 12s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-amber)]/50 flex items-center justify-center glow-box-amber"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-amber)]"
              >
                P6
              </span>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 animate-orbit-reverse"
            style="animation-duration: 15s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-emerald)]/50 flex items-center justify-center glow-box-emerald"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-emerald)]"
              >
                SAP
              </span>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-full border-2 border-[var(--orion-cyan)]/30 animate-pulse-glow"
          />
        </div>
      </div>
      <div
        class="text-center mb-8 animate-slide-up delay-200"
      >
        <h2
          class="text-lg md:text-xl font-semibold text-[var(--orion-text-primary)] mb-3 font-display"
        >
          Your P6 + SAP Command Center
        </h2>
        <p
          class="text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          ORION unifies Primavera P6 schedules with SAP financials, giving you real-time visibility across your entire project portfolio.
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10"
      >
        <div
          class="feature-card p6 animate-initial animate-slide-up"
          style="animation-delay: 300ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-amber)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  P6 Schedule Data
                </h3>
                <span
                  class="badge badge-amber"
                >
                  SCHEDULE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Projects, WBS, activities, and resources from Primavera P6
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sap animate-initial animate-slide-up"
          style="animation-delay: 400ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-emerald)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  SAP Financial Data
                </h3>
                <span
                  class="badge badge-emerald"
                >
                  FINANCE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Budget, actuals, commitments, and purchase orders
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sync animate-initial animate-slide-up"
          style="animation-delay: 500ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-cyan)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Real-time Sync
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  LIVE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Automatic synchronization keeps data always current
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card dashboard animate-initial animate-slide-up"
          style="animation-delay: 600ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-violet)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Unified Dashboard
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  ANALYTICS
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Cross-project visibility with KPIs and health metrics
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-4 animate-slide-up delay-700"
      >
        <button
          aria-busy="false"
          class="btn-primary group"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="none"
            height="20"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M13 10V3L4 14h7v7l9-11h-7z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span>
            Begin Setup
          </span>
          <svg
            aria-hidden="true"
            class="w-5 h-5 transition-transform group-hover:translate-x-1"
            fill="none"
            height="20"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M13 7l5 5m0 0l-5 5m5-5H6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <p
          class="text-sm text-[var(--orion-text-muted)] font-mono"
        >
          Setup takes ~5 minutes
        </p>
        <div
          class="flex items-center gap-2 mt-2"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-cyan)] glow-box-cyan"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot in loading state 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex flex-col items-center justify-center p-6 md:p-8"
    role="main"
  >
    <div
      class="max-w-3xl w-full"
    >
      <div
        class="flex items-center gap-4 mb-8 animate-slide-up"
      >
        <img
          alt="User avatar"
          class="w-14 h-14 rounded-xl object-cover border-2 border-[var(--orion-cyan)]/30"
          src="https://example.com/avatar.jpg"
        />
        <div>
          <h1
            class="text-2xl md:text-3xl font-bold text-[var(--orion-text-primary)] font-display"
          >
            Welcome, 
            <span
              class="text-gradient-cyan"
            >
              John
            </span>
          </h1>
          <p
            class="text-[var(--orion-text-secondary)] font-mono text-sm"
          >
            ACME EPC Contractors
          </p>
        </div>
      </div>
      <div
        class="animate-scale-in delay-100"
      >
        <div
          aria-hidden="true"
          class="relative w-32 h-32 sm:w-40 sm:h-40 md:w-48 md:h-48 mx-auto mb-6 md:mb-8"
        >
          <div
            class="absolute inset-0 rounded-full border border-[var(--orion-border)] animate-orbit-reverse"
          />
          <div
            class="absolute inset-4 rounded-full border border-[var(--orion-cyan)]/20 animate-orbit"
          />
          <div
            class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute inset-0 flex items-center justify-center"
          >
            <div
              class="w-20 h-20 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-secondary)] border border-[var(--orion-border)] flex items-center justify-center shadow-lg"
            >
              <span
                class="text-2xl font-bold text-gradient-cyan font-display"
              >
                O
              </span>
            </div>
          </div>
          <div
            class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 animate-orbit"
            style="animation-duration: 12s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-amber)]/50 flex items-center justify-center glow-box-amber"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-amber)]"
              >
                P6
              </span>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 animate-orbit-reverse"
            style="animation-duration: 15s;"
          >
            <div
              class="w-10 h-10 rounded-lg bg-[var(--orion-bg-elevated)] border border-[var(--orion-emerald)]/50 flex items-center justify-center glow-box-emerald"
            >
              <span
                class="text-xs font-mono font-semibold text-[var(--orion-emerald)]"
              >
                SAP
              </span>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-full border-2 border-[var(--orion-cyan)]/30 animate-pulse-glow"
          />
        </div>
      </div>
      <div
        class="text-center mb-8 animate-slide-up delay-200"
      >
        <h2
          class="text-lg md:text-xl font-semibold text-[var(--orion-text-primary)] mb-3 font-display"
        >
          Your P6 + SAP Command Center
        </h2>
        <p
          class="text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          ORION unifies Primavera P6 schedules with SAP financials, giving you real-time visibility across your entire project portfolio.
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10"
      >
        <div
          class="feature-card p6 animate-initial animate-slide-up"
          style="animation-delay: 300ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-amber)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  P6 Schedule Data
                </h3>
                <span
                  class="badge badge-amber"
                >
                  SCHEDULE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Projects, WBS, activities, and resources from Primavera P6
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sap animate-initial animate-slide-up"
          style="animation-delay: 400ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-emerald)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  SAP Financial Data
                </h3>
                <span
                  class="badge badge-emerald"
                >
                  FINANCE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Budget, actuals, commitments, and purchase orders
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card sync animate-initial animate-slide-up"
          style="animation-delay: 500ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-cyan)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Real-time Sync
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  LIVE
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Automatic synchronization keeps data always current
              </p>
            </div>
          </div>
        </div>
        <div
          class="feature-card dashboard animate-initial animate-slide-up"
          style="animation-delay: 600ms;"
        >
          <div
            class="flex items-start gap-4"
          >
            <div
              class="text-[var(--orion-violet)] flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 flex-shrink-0"
                fill="none"
                height="20"
                stroke="currentColor"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center gap-2 mb-1"
              >
                <h3
                  class="font-semibold text-[var(--orion-text-primary)] font-display"
                >
                  Unified Dashboard
                </h3>
                <span
                  class="badge badge-cyan"
                >
                  ANALYTICS
                </span>
              </div>
              <p
                class="text-sm text-[var(--orion-text-secondary)] leading-relaxed"
              >
                Cross-project visibility with KPIs and health metrics
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-4 animate-slide-up delay-700"
      >
        <button
          aria-busy="true"
          class="btn-primary group"
          disabled=""
          type="button"
        >
          <div
            aria-hidden="true"
            class="spinner"
            data-testid="loading-spinner"
          />
          <span>
            Begin Setup
          </span>
          <svg
            aria-hidden="true"
            class="w-5 h-5 transition-transform group-hover:translate-x-1"
            fill="none"
            height="20"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M13 7l5 5m0 0l-5 5m5-5H6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <p
          class="text-sm text-[var(--orion-text-muted)] font-mono"
        >
          Setup takes ~5 minutes
        </p>
        <div
          class="flex items-center gap-2 mt-2"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-cyan)] glow-box-cyan"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-border)]"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;
